group 'me.zero'
version '1.0'

apply plugin: 'java'

sourceCompatibility = targetCompatibility = 9
compileJava {
    sourceCompatibility = targetCompatibility = 9
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.ow2.asm:asm-all:6.0_BETA'
    compile 'com.google.guava:guava:23.0'
}
